[barbican] introduce switch for disabling postgresql, refresh requirements

--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -122,6 +122,7 @@ mysql_metrics:
       - "count"
 
 postgresql:
+  enabled: true
   custom_repository: true
   imageTag: '9.4.21'
   postgresDatabase: barbican
