--- a/openstack/barbican/requirements.yaml
+++ b/openstack/barbican/requirements.yaml
@@ -5,6 +5,7 @@ dependencies:
   - name: postgresql
     repository: file://../../common/postgresql
     version: 0.3.0
+    condition: postgresql.enabled
   - name: mariadb
     repository: file://../../common/mariadb
     version: 0.1.1
@@ -16,6 +17,7 @@ dependencies:
   - name: pgmetrics
     repository: file://../../common/pgmetrics
     version: 0.1.0
+    condition: postgresql.enabled
   - name: rabbitmq
     repository: file://../../common/rabbitmq
     version: 0.1.0
