--- a/system/kube-monitoring/values.yaml
+++ b/system/kube-monitoring/values.yaml
@@ -115,7 +115,6 @@ prometheus-kubernetes-rules:
 prometheus-node-exporter:
   image:
     repository: prom/node-exporter
-    tag: v0.17.0
 
   serviceAccount:
     create: false
@@ -129,8 +128,9 @@ prometheus-node-exporter:
     - --collector.filesystem.ignored-fs-types=^(autofs|binfmt_misc|bpf|cgroup|configfs|debugfs|devpts|devtmpfs|fusectl|hugetlbfs|mqueue|nsfs|overlay|proc|procfs|pstore|rpc_pipefs|securityfs|selinuxfs|squashfs|sysfs|tmpfs|tracefs)$$
     - --collector.processes
     - --path.rootfs=/rootfs
-    # enabled by default. flag didn't make it to prom/node-exporter:v0.17.0 .
-    # - --collector.systemd.enable-task-metrics
+    - --collector.systemd.enable-task-metrics
+    - --collector.systemd.enable-restarts-metrics
+    - --collector.systemd.enable-start-time-metrics
 
   extraHostVolumeMounts:
     - name: dbus
