Fix postgresql values

--- a/global/concourse/values.yaml
+++ b/global/concourse/values.yaml
@@ -109,14 +109,15 @@ concourse:
 
   postgresql:
     enabled: true
-    postgresUser: concourse
-    # postgresPassword:
-    postgresDatabase: concourse
+    postgresqlUsername: concourse
+    # postgresqlPassword:
+    postgresqlDatabase: concourse
 
     persistence:
       enabled: true
       storageClass: cinder-default
-      accessMode: ReadWriteOnce
+      accessModes:
+        - ReadWriteOnce
       size: 50Gi
 
   rbac:
