Limes: assign some alerts/rules to prometheus-kubernetes
The alerts/rules don't work in prometheus-openstack because the required
metrics are not in there.

--- a/openstack/limes/templates/api-service.yaml
+++ b/openstack/limes/templates/api-service.yaml
@@ -12,7 +12,7 @@ metadata:
     prometheus.io/scrape: "true"
     prometheus.io/port: "80"
     # The `openstack` Prometheus shall scrape metrics of OpenStack services.
-    prometheus.io/targets: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus | quote }}
+    prometheus.io/targets: {{ required ".Values.alerts.prometheus.openstack missing" $values.alerts.prometheus.openstack | quote }}
 
 spec:
   selector:
