--- a/openstack/limes/values.yaml
+++ b/openstack/limes/values.yaml
@@ -43,5 +43,8 @@ limes:
 # Deploy limes Prometheus alerts.
 alerts:
   enabled: true
-  # Name of the Prometheus to which the alerts should be assigned to.
-  prometheus: openstack
+  # Names of the Prometheus to which the alerts should be assigned to.
+  # Keys = directory names in alerts/ and aggregations/
+  prometheus:
+    openstack: openstack
+    kubernetes: kubernetes
