--- a/openstack/limes/templates/prometheus-alerts.yaml
+++ b/openstack/limes/templates/prometheus-alerts.yaml
@@ -1,6 +1,7 @@
 {{- $values := .Values }}
 {{- if $values.alerts.enabled }}
-{{- range $path, $bytes := .Files.Glob "alerts/*.alerts" }}
+{{- range $target, $unused := $values.alerts.prometheus }}
+{{- range $path, $bytes := $.Files.Glob (printf "alerts/%s/*.alerts" $target) }}
 ---
 apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
@@ -11,7 +12,7 @@ metadata:
     app: limes-api
     tier: os
     type: alerting-rules
-    prometheus: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus }}
+    prometheus: {{ index $values.alerts.prometheus $target | required (printf "$values.alerts.prometheus.%s missing" $target) }}
 
 spec:
 {{ printf "%s" $bytes | indent 2 }}
@@ -30,7 +31,7 @@ metadata:
     app: limes-api
     tier: os
     type: alerting-rules
-    prometheus: {{ required ".Values.alerts.prometheus missing" $values.alerts.prometheus }}
+    prometheus: {{ required ".Values.alerts.prometheus.openstack missing" $values.alerts.prometheus.openstack }}
 
 spec:
   groups:
@@ -77,3 +78,5 @@ spec:
           annotations:
             summary: 'Unexpected role assignments'
             description: 'The Keystone role "cloud_resource_admin" is assigned to more users/groups than expected.'
+
+{{- end }}
