--- a/global/supernova/templates/service.yaml
+++ b/global/supernova/templates/service.yaml
@@ -3,6 +3,11 @@ apiVersion: v1
 
 metadata:
   name: supernova
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/port: "80"
+    prometheus.io/path: "/system/metrics"
+    prometheus.io/targets: "openstack"
 
 spec:
   selector:
