vasa-exporter: vp_user defined in region chart

--- a/prometheus-exporters/vasa-exporter/values.yaml
+++ b/prometheus-exporters/vasa-exporter/values.yaml
@@ -6,7 +6,7 @@ vasa_exporter:
   vc_user: DEFINED-IN-REGION-CHART
   vc_pass: DEFINED-IN-REGION-CHART
   vp_port: 8143
-  vp_user: administrator
+  vp_user: DEFINED-IN-REGION-CHART
   vp_pass: DEFINED-IN-REGION-CHART
   vvol_user: DEFINED-IN-REGION-CHART
   vvol_pass: DEFINED-IN-REGION-CHART
