[infra-monitoring] added vasa-exporter to values and requirements

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -87,3 +87,9 @@ dependencies:
     repository: file://vendor/ping-exporter
     version: 0.1.0
     condition: ping_exporter.enabled
+
+  - name: vasa-exporter
+    alias: vasa_exporter
+    repository: file://vendor/vasa-exporter
+    version: 0.1.0
+    condition: vasa_exporter.enabled
