--- a/system/kube-system/charts/node-problem-detector/templates/daemonset.yaml
+++ b/system/kube-system/charts/node-problem-detector/templates/daemonset.yaml
@@ -9,6 +9,11 @@ spec:
     metadata:
       labels:
         app: node-problem-detector
+      annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
+        prometheus.io/scrape: "true"
+        prometheus.io/port: {{ required ".Values.prometheus.port missing" .Values.prometheus.port | quote }}
+        prometheus.io/targets: {{ required ".Values.prometheus.targets missing" .Values.prometheus.targets | quote }}
     spec:
       tolerations:
       - key: "species"
@@ -19,18 +24,19 @@ spec:
         command:
         - /node-problem-detector
         - --logtostderr
-        - --v=0
-        - --system-log-monitors=/config/kernel-monitor.json
-        image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
+        - --prometheus-address={{ required ".Values.prometheusAddress missing" .Values.prometheus.address }}
+        - --prometheus-port={{ required ".Values.prometheusPort missing " .Values.prometheus.port }}
+        {{- if .Values.systemLogMonitors }}
+        - --config.system-log-monitor={{- range $index, $monitor := .Values.systemLogMonitors }}{{if ne $index 0}},{{end}}{{ printf "/config/%s" $monitor }}{{- end }}
+        {{- end }}
+        {{- if .Values.customPluginMonitors }}
+        - --config.custom-plugin-monitor={{- range $index, $monitor := .Values.customPluginMonitors }}{{if ne $index 0}},{{end}}{{ printf "/config/%s" $monitor }}{{- end }}
+        {{- end }}
+        image: {{ include "image" . }}
         securityContext:
           privileged: true
         resources:
-          limits:
-            cpu: "200m"
-            memory: "100Mi"
-          requests:
-            cpu: "20m"
-            memory: "20Mi"
+{{ toYaml .Values.resources | indent 10 }}
         env:
         - name: NODE_NAME
           valueFrom:
@@ -40,20 +46,26 @@ spec:
         - name: log
           mountPath: /var/log
           readOnly: true
-        # Make sure node problem detector is in the same timezone
-        # with the host.
+        # Make sure node problem detector is in the same timezone with the host.
         - name: localtime
           mountPath: /etc/localtime
           readOnly: true
         - name: config
           mountPath: /config
           readOnly: true
+{{- range $_, $mount := .Values.additionalHostVolumeMounts }}
+        - name: {{ $mount.name | lower }}
+          mountPath: {{ $mount.mountPath }}
+          readOnly: {{ default true $mount.readOnly }}
+{{- end }}
         ports:
           - name: healthz
             containerPort: 10256
+          - name: metrics
+            containerPort: {{ required ".Values.prometheus.port missing" .Values.prometheus.port }}
       volumes:
       - name: log
-        # Config `log` to your system log directory
+        # Config `log` to your system log directory.
         hostPath:
           path: /var/log/
       - name: localtime
@@ -62,3 +74,9 @@ spec:
       - name: config
         configMap:
           name: node-problem-detector-config
+          defaultMode: 0777
+{{- range $_, $mount := .Values.additionalHostVolumeMounts }}
+      - name: {{ $mount.name | lower }}
+        hostPath:
+          path: {{ $mount.hostPath }}
+{{- end }}
