[barbican] metrics are count_gauge

--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -79,7 +79,7 @@ mysql_metrics:
           containers.status,
           projects.external_id;
       values:
-      - "count"
+      - "count_gauge"
     - help: Barbican secret count by type
       labels:
       - "id"
@@ -102,7 +102,7 @@ mysql_metrics:
         where secrets.deleted='false'
         GROUP BY secrets.id, secrets.status, secrets.name, projects.external_id, secrets.secret_type;
       values:
-      - "count"
+      - "count_gauge"
     - help: Barbican container expiration date
       labels:
       - "status"
