--- a/system/kube-system/charts/node-problem-detector/values.yaml
+++ b/system/kube-system/charts/node-problem-detector/values.yaml
@@ -10,7 +10,9 @@ resources:
     cpu: 20m
     memory: 20Mi
 
+# Expose additional Prometheus metrics directly.
 prometheus:
+  enabled: false
   address: 0.0.0.0
   port: 20257
   targets: kubernetes
