--- a/system/disco/templates/deployment.yaml
+++ b/system/disco/templates/deployment.yaml
@@ -12,6 +12,7 @@ spec:
       labels:
         app: disco
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
         prometheus.io/scrape: "true"
         prometheus.io/port: {{ required ".Values.metrics.port missing" .Values.metrics.port | quote }}
         prometheus.io/targets: {{ required ".Values.metrics.prometheus missing" .Values.metrics.prometheus | quote }}
