--- a/system/vice-president/templates/deployment.yaml
+++ b/system/vice-president/templates/deployment.yaml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: {{ template "name" . }}
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath "/config.yaml") . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath "/secret.yaml") . | sha256sum }}
         prometheus.io/scrape: 'true'
         prometheus.io/port: {{ default 9091 .Values.president.metricsPort | quote }}
         prometheus.io/targets:  {{ required ".Values.alerts.prometheus missing" .Values.alerts.prometheus | quote }}
