moves alerts to exporter

--- a/prometheus-exporters/event-exporter/values.yaml
+++ b/prometheus-exporters/event-exporter/values.yaml
@@ -53,3 +53,9 @@ metrics:
 
 rbac:
   create: false
+
+# Enable Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts will be assigned to.
+  prometheus: kubernetes
