--- a/prometheus-exporters/oomkill-exporter/values.yaml
+++ b/prometheus-exporters/oomkill-exporter/values.yaml
@@ -2,6 +2,7 @@ image:
   repository: sapcc/kubernetes-oomkill-exporter
   tag: 0.2.0
   pullPolicy: IfNotPresent
+
 resources:
   limits:
     cpu: 100m
@@ -9,7 +10,14 @@ resources:
   requests:
     cpu: 20m
     memory: 20Mi
+
 metrics:
   port: 9102
   # Name of the Prometheus supposed to scrape the metrics.
+  prometheus: kubernetes
+
+# Enable Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts will be assigned to.
   prometheus: kubernetes
