--- a/openstack/barbican/values.yaml
+++ b/openstack/barbican/values.yaml
@@ -94,7 +94,7 @@ mysql_metrics:
           secrets.id,
           secrets.status,
           secrets.name  AS secret_name,
-          secrets.expiration,
+          IFNULL(secrets.expiration,""),
           projects.external_id  AS project_id,
           secrets.secret_type ,
           COUNT(*)  AS count_gauge
@@ -115,7 +115,7 @@ mysql_metrics:
       query: |
         SELECT
           secrets.status,
-          secrets.expiration AS expiration_date,
+          IFNULL(secrets.expiration,"") AS expiration_date,
           secrets.name  AS certificate_name,
           projects.external_id  AS project_id,
           COUNT(*)  AS count_gauge
