--- a/system/kube-system/requirements.yaml
+++ b/system/kube-system/requirements.yaml
@@ -9,10 +9,10 @@ dependencies:
     condition: conntrack-nanny.enabled
 
   - name: vice-president
-    repository: file://../vice-president
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.0.5
 
   - name: disco
-    repository: file://../disco
+    repository: https://charts.eu-de-2.cloud.sap
     version: 1.1.1
     condition: disco.enabled
