--- a/openstack/glance/requirements.yaml
+++ b/openstack/glance/requirements.yaml
@@ -2,12 +2,22 @@ dependencies:
   - name: utils
     repository: file://../../openstack/utils
     version: 0.1.1
+  - name: mariadb
+    repository: file://../../common/mariadb
+    version: 0.1.1
+    condition: mariadb.enabled
+  - name: mysql_metrics
+    repository: file://../../common/mysql_metrics
+    version: 0.1.0
+    condition: mariadb.enabled
   - name: postgresql
     repository: file://../../common/postgresql
     version: 0.3.0
+    condition: postgresql.enabled
   - name: pgmetrics
     repository: file://../../common/pgmetrics
     version: 0.1.0
+    condition: postgresql.enabled
   - name: memcached
     repository: file://../../common/memcached
     version: 0.0.1
