--- a/common/mariadb/templates/etc-configmap.yaml
+++ b/common/mariadb/templates/etc-configmap.yaml
@@ -11,9 +11,11 @@ metadata:
 data:
   mariadb.cnf: |
     [mysqld]
-    max_connections         = 500
-    innodb_buffer_pool_size = 800M
-    innodb_log_file_size    = 200M
-    innodb_open_files       = 1000
-    innodb_stats_on_metadata= 0
-    sql_mode                = "TRADITIONAL"
+    max_connections           = 1024
+    innodb_buffer_pool_size   = 1024M
+    innodb_log_file_size      = 256M
+    innodb_open_files         = 4000
+    innodb_stats_on_metadata  = 0
+    innodb_thread_concurrency = 0
+    innodb_checksum_algorithm = crc32
+    sql_mode                  = "TRADITIONAL"
