--- a/openstack/keystone/values.yaml
+++ b/openstack/keystone/values.yaml
@@ -357,8 +357,27 @@ alerts:
   # Name of the Prometheus to which the alerts should be assigned to.
   prometheus: openstack
 
-# Deploy Keystone Prometheus aggregations.
-aggregations:
+# Deploy SRE monitoring & alerting
+sre:
   enabled: false
-  # Name of the Prometheus to which the aggregations should be assigned to.
-  prometheus: openstack
+  # Name of the Prometheus to which the sre metrics & alerts should be assigned to.
+  prometheus:
+    aggregations: openstack
+    alerts: openstack
+#    alerts: global-openstack
+
+  periods:
+    - 5m
+    - 30m
+    - 1h
+    - 2h
+    - 6h
+    - 1d
+    - 3d
+  slo:
+    api_latency_target:
+      token_create: 0.1
+      token_validate: 0.025
+    api_latency_ratio_percent:
+      token_create: 0.1
+      token_validate: 0.1
