-- enable hostNetwork for sysctl

--- a/system/kube-system/charts/sysctl/templates/sysctl_ds.yaml
+++ b/system/kube-system/charts/sysctl/templates/sysctl_ds.yaml
@@ -11,6 +11,7 @@ spec:
       labels:
         app: sysctl
     spec:
+      hostNetwork: true
       tolerations:
       - key: "species"
         operator: "Equal"
