update Keppel chart for current conventions

--- a/openstack/keppel/templates/deployment-dev-toolbox.yaml
+++ b/openstack/keppel/templates/deployment-dev-toolbox.yaml
@@ -1,8 +1,8 @@
-{{- if eq .Values.global.region "staging" }}
+{{- if .Values.keppel.with_dev_toolbox }}
 
-# In staging, the dev-toolbox is a place to run mitmproxy to observe what the 
+# In staging/QA, the dev-toolbox is a place to run mitmproxy to observe what the
 # keppel-api is doing. The templates/deployment-api.yaml has some amendments
-# for quickly setting HTTP_PROXY=http://dev-toolbox:8080 and KEPPEL_INSECURE=1
+# for quickly setting HTTP_PROXY=http://dev-toolbox:8080 and KEPPEL_INSECURE=true
 # to enable mitmproxy usage.
 
 apiVersion: extensions/v1beta1
