--- a/openstack/keppel/values.yaml
+++ b/openstack/keppel/values.yaml
@@ -3,8 +3,9 @@ keppel:
   image_tag: latest
   image_pull_policy: Always
 
+  with_dev_toolbox: false
+
   service_password: DEFINED_IN_VALUES_FILE
-  service_user_id: DEFINED_IN_VALUES_FILE # TODO remove once obsoleted
 
   issuer:
     key.pem:  DEFINED_IN_VALUES_FILE
