[glance] use glance user for mysql_metrics

--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -162,7 +162,7 @@ mariadb:
 
 mysql_metrics:
   db_name: glance
-  db_user: root
+  db_user: glance
   db_password: DEFINED-IN-REGION-CHART
   customMetrics:
     - help: Glance Image count
