--- a/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
+++ b/openstack/nova/templates/hypervisors/hypervisors-vmware-configmap-vct.yaml
@@ -26,6 +26,8 @@ template: |
       {{- if .Values.compute.defaults.default.max_concurrent_builds_per_project }}
       max_concurrent_builds_per_project = {{ .Values.compute.defaults.default.max_concurrent_builds_per_project }}
       {{- end }}
+      ram_allocation_ratio = {{ .Values.compute.defaults.default.ram_allocation_ratio }}
+      cpu_allocation_ratio = {{ .Values.compute.defaults.default.cpu_allocation_ratio }}
 
       scheduler_tracks_instance_changes = {{ .Values.scheduler.scheduler_tracks_instance_changes }}
       scheduler_instance_sync_interval = {{ .Values.scheduler.scheduler_instance_sync_interval }}
