--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -194,6 +194,8 @@ compute:
   defaults:
     default:
       max_concurrent_builds_per_project: 3
+      ram_allocation_ratio: 1.0
+      cpu_allocation_ratio: 10.0
     vmware:
       insecure: true
       use_linked_clone: false
