--- a/openstack/elk/values.yaml
+++ b/openstack/elk/values.yaml
@@ -15,3 +15,9 @@ elk_fluent_systemd_port: '8886'
 elk_kibana_port_public: '5601'
 elk_namespace: elk
 
+# Deploy Cinder Prometheus alerts.
+alerts:
+  enabled: true
+  # Name of the Prometheus to which the alerts should be assigned to.
+  prometheus: infra-collector
+
