--- a/openstack/keystone/templates/prometheus-sre-aggregations.yaml
+++ b/openstack/keystone/templates/prometheus-sre-aggregations.yaml
@@ -28,7 +28,7 @@ spec:
           api: "token-create"
       expr: sum(openstack_watcher_api_requests_duration_seconds_sum{service="identity", target_type_uri="data/security/auth/tokens", action="authenticate"}) by (region, status, le)
 
-    - record: global:api_latency_slo:percent
+    - record: global:api_latency_violations_per_request_slo:percent
       labels:
           region: {{required ".Values.global.region missing" $values.global.region}}
           service: "keystone"
@@ -36,7 +36,7 @@ spec:
       expr: {{ $values.sre.slo.api_latency_ratio_percent.token_create | quote }}
 
 {{- range $period := $values.sre.periods }}
-    - record: global:api_latency_sli:ratio_rate{{$period}}
+    - record: global:api_latency_violations_per_request_sli:ratio_rate{{$period}}
       labels:
           region: {{required ".Values.global.region missing" $values.global.region}}
           service: "keystone"
@@ -62,7 +62,7 @@ spec:
           api: "token-validate"
       expr: sum(openstack_watcher_api_requests_duration_seconds_sum{service="identity", target_type_uri="data/security/auth/tokens", action="read/list"}) by (region, status, le)
 
-    - record: global:api_latency_slo:percent
+    - record: global:api_latency_violations_per_request_slo:percent
       labels:
           service: "keystone"
           api: "token-validate"
@@ -70,7 +70,7 @@ spec:
       expr: {{ $values.sre.slo.api_latency_ratio_percent.token_validate | quote }}
 
 {{- range $period := $values.sre.periods }}
-    - record: global:api_latency_sli:ratio_rate{{$period}}
+    - record: global:api_latency_violations_per_request_sli:ratio_rate{{$period}}
       labels:
           service: "keystone"
           api: "token-validate"
