--- a/openstack/keystone/templates/prometheus-sre-alerts.yaml
+++ b/openstack/keystone/templates/prometheus-sre-alerts.yaml
@@ -19,15 +19,15 @@ spec:
     - alert: OpenstackKeystoneSRE2or5PctErrorBudgetBurn
       expr: |2
           (
-            (100 * global:api_latency_sli:ratio_rate:ratio_rate1h > on (region, api) 14.4 * global:api_latency_slo:percent)
+            (100 * global:api_latency_violations_per_request_sli:ratio_rate1h > on (region, api) 14.4 * global:api_latency_violations_per_request_slo:percent)
             and
-            (100 * global:api_latency_sli:ratio_rate:ratio_rate5m > on (region, api) 14.4 * global:api_latency_slo:percent)
+            (100 * global:api_latency_violations_per_request_sli:ratio_rate5m > on (region, api) 14.4 * global:api_latency_violations_per_request_slo:percent)
           )
           or
           (
-            (100 * global:api_latency_sli:ratio_rate:ratio_rate6h > on (region, api) 6 * global:api_error_ratio_slo:percent)
+            (100 * global:api_latency_violations_per_request_sli:ratio_rate6h > on (region, api) 6 * global:api_latency_violations_per_request_slo:percent)
             and
-            (100 * global:api_latency_sli:ratio_rate:ratio_rate30m > on (region, api) 6 * global:api_error_ratio_slo:percent)
+            (100 * global:api_latency_violations_per_request_sli:ratio_rate30m > on (region, api) 6 * global:api_latency_violations_per_request_slo:percent)
           )
       for: 2m
       labels:
@@ -42,15 +42,15 @@ spec:
     - alert: OpenstackKeystoneSRE10PctErrorBudgetBurn
       expr: |2
           (
-            (100 * global:api_latency_sli:ratio_rate:ratio_rate1d > on (region, api) 3 * global:api_error_ratio_slo:percent)
+            (100 * global:api_latency_violations_per_request_sli:ratio_rate1d > on (region, api) 3 * global:api_latency_violations_per_request_slo:percent)
             and
-            (100 * global:api_latency_sli:ratio_rate:ratio_rate2h > on (region, api) 3 * global:api_error_ratio_slo:percent)
+            (100 * global:api_latency_violations_per_request_sli:ratio_rate2h > on (region, api) 3 * global:api_latency_violations_per_request_slo:percent)
           )
           or
           (
-            (100 * global:api_latency_sli:ratio_rate:ratio_rate3d > on (region, api) global:api_error_ratio_slo:percent)
+            (100 * global:api_latency_violations_per_request_sli:ratio_rate3d > on (region, api) global:api_latency_violations_per_request_slo:percent)
             and
-            (100 * global:api_latency_sli:ratio_rate:ratio_rate6h > on (region, api) global:api_error_ratio_slo:percent)
+            (100 * global:api_latency_violations_per_request_sli:ratio_rate6h > on (region, api) global:api_latency_violations_per_request_slo:percent)
           )
       for: 1h
       labels:
