[neutron] give network_admin in ccadmin

--- a/openstack/neutron/templates/seed.yaml
+++ b/openstack/neutron/templates/seed.yaml
@@ -123,7 +123,7 @@ spec:
       - project: compute_tools
         role: network_admin
       - domain: ccadmin
-        role: network_viewer
+        role: network_admin
         inherited: true
     - name: CCADMIN_NETWORK_SUPPORT
       role_assignments:
