Keppel: use "name" label on pods, like for Castellum/Limes

--- a/openstack/keppel/templates/deployment-api.yaml
+++ b/openstack/keppel/templates/deployment-api.yaml
@@ -14,11 +14,11 @@ spec:
       maxSurge: 2
   selector:
     matchLabels:
-      app: keppel-api
+      name: keppel-api
   template:
     metadata:
       labels:
-        app: keppel-api
+        name: keppel-api
       annotations:
         checksum: {{ include "keppel/templates/configmap.yaml" . | sha256sum }}
     spec:
