--- a/openstack/keppel/templates/deployment-dev-toolbox.yaml
+++ b/openstack/keppel/templates/deployment-dev-toolbox.yaml
@@ -15,13 +15,13 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: dev-toolbox
+      name: dev-toolbox
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
-        app: dev-toolbox
+        name: dev-toolbox
     spec:
       containers:
       - name: dev-toolbox
@@ -52,7 +52,7 @@ metadata:
 
 spec:
   selector:
-    app: dev-toolbox
+    name: dev-toolbox
   ports:
     - port: 8080 # mitmproxy default port
 
