[glance] disable file store with pvc by default and disable registry as it is deprecated

--- a/openstack/glance/values.yaml
+++ b/openstack/glance/values.yaml
@@ -9,18 +9,20 @@ global:
   pgbouncer:
     enabled: true
 
-# The registry is deprecated, setting imageVersionGlanceRegistry or imageVersion will enable the deployment (but not the setting)
+# The registry is deprecated, setting imageVersionGlanceRegistry will enable the deployment (but not the setting)
 # imageVersionGlance: null
 # imageVersionGlanceApi: null
 # imageVersionGlanceRegistry: null
 
-stores: "swift,file"
+# add 'file' store for the build-up
+stores: "swift"
 default_store: swift
 
+# set file store and persistence to 'true' for the build-up
 file:
-  enabled: true
+  enabled: false
   persistence:
-    enabled: true
+    enabled: false
     existingClaim: glance-pvclaim
 
 swift:
