--- a/openstack/glance/templates/deployment.yaml
+++ b/openstack/glance/templates/deployment.yaml
@@ -32,6 +32,7 @@ spec:
         chart-version: {{.Chart.Version}}
         checksum/etc-configmap.conf: {{ include (print $.Template.BasePath "/etc-configmap.yaml") . | sha256sum }}
     spec:
+      {{- if .Values.file.persistence.enabled }}
       initContainers:
       - name: permissions
         securityContext:
@@ -48,6 +49,7 @@ spec:
         - -xc
         - |
           chown -R glance:glance /glance_store
+      {{- end }}
       containers:
       - name: api
         image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/ubuntu-source-glance-api:{{.Values.imageVersionGlanceApi | default .Values.imageVersion | default .Values.image_version | required "Please set glance.imageVersion or similar"}}
@@ -56,13 +58,13 @@ spec:
           httpGet:
             path: /healthcheck
             port: {{.Values.api_port_internal}}
-          initialDelaySeconds: 15
+          initialDelaySeconds: 20
           timeoutSeconds: 5
         readinessProbe:
           httpGet:
             path: /healthcheck
             port: {{.Values.api_port_internal}}
-          initialDelaySeconds: 15
+          initialDelaySeconds: 20
           timeoutSeconds: 5
         command:
         - dumb-init
@@ -143,7 +145,7 @@ spec:
           readOnly: true
         {{- end }}
 
-      {{- if (or .Values.imageVersionGlanceRegistry .Values.imageVersion .Values.image_version) }}
+      {{- if .Values.imageVersionGlanceRegistry }}
       - name: registry
         image: {{required ".Values.global.imageRegistry is missing" .Values.global.imageRegistry}}/{{.Values.global.imageNamespace}}/ubuntu-source-glance-registry:{{ .Values.imageVersionGlanceApi | default .Values.imageVersion | default .Values.image_version | required "Please set glance.imageVersion or similar" }}
         imagePullPolicy: IfNotPresent
@@ -154,6 +156,8 @@ spec:
           httpGet:
             path: /healthcheck
             port: 9191
+          initialDelaySeconds: 20
+          timeoutSeconds: 5
         env:
         - name: COMMAND
           value: "glance-registry"
