--- a/openstack/elk/templates/fluent-vcenter-service.yaml
+++ b/openstack/elk/templates/fluent-vcenter-service.yaml
@@ -7,7 +7,7 @@ metadata:
   annotations:
     prometheus.io/scrape: "true"
     prometheus.io/port: "{{.Values.fluent_vcenter.prometheus_port}}"
-    prometheus.io/targets: "infra-collector"
+    prometheus.io/targets: {{ .Values.fluent_vcenter.prometheus | quote }}
 
 spec:
   selector:
