--- a/openstack/elk/values.yaml
+++ b/openstack/elk/values.yaml
@@ -14,4 +14,5 @@ elk_fluent_port: '8885'
 elk_fluent_systemd_port: '8886'
 elk_kibana_port_public: '5601'
 elk_namespace: elk
-
+fluent_vcenter:
+  prometheus: 'infra-collector'
