--- a/openstack/keppel/templates/configmap.yaml
+++ b/openstack/keppel/templates/configmap.yaml
@@ -18,6 +18,8 @@ data:
 
       "account:list": "rule:any_ro",
       "account:show": "rule:any_ro and rule:account_matches_scope",
+      "account:pull": "rule:any_ro and rule:account_matches_scope",
+      "account:push": "rule:any_rw and rule:account_matches_scope",
       "account:edit": "rule:any_rw and rule:account_matches_scope"
     }
 
