--- a/openstack/keystone/templates/prometheus-sre-alerts.yaml
+++ b/openstack/keystone/templates/prometheus-sre-alerts.yaml
@@ -7,7 +7,7 @@ kind: PrometheusRule
 metadata:
   name: openstack-keystone-sre-alerts
   labels:
-    tier: os
+    tier: sre
     type: alerting-rules
     prometheus: {{ required ".Values.sre.prometheus.alerts missing" $values.sre.prometheus.alerts }}
 
@@ -34,7 +34,7 @@ spec:
         context: availability
         service: "{{`{{$labels.ingress}}`}}"
         severity: info
-        tier: os
+        tier: sre
       annotations:
         summary: "an api burns its error budget very fast"
         description: "{{`{{$labels.ingress}}`}} api has returned {{`{{$value}}`}}% 5xx."
@@ -57,7 +57,7 @@ spec:
         context: availability
         service: "{{`{{$labels.ingress}}`}}"
         severity: warning
-        tier: os
+        tier: sre
       annotations:
         summary: "an api has consumed its error budget by 10%"
         description: "{{`{{$labels.ingress}}`}} api has returned {{`{{$value}}`}}% 5xx"
