--- a/openstack/sre/templates/prometheus-alerts.yaml
+++ b/openstack/sre/templates/prometheus-alerts.yaml
@@ -4,7 +4,7 @@ kind: PrometheusRule
 metadata:
   name: openstack-sre-alerts
   labels:
-    tier: os
+    tier: sre
     type: alerting-rules
     prometheus: {{ required ".Values.prometheus.alerts missing" .Values.prometheus.alerts }}
 
@@ -31,7 +31,7 @@ spec:
         context: availability
         service: "{{`{{$labels.ingress}}`}}"
         severity: info
-        tier: os
+        tier: sre
       annotations:
         summary: "an api burns its error budget very fast"
         description: "{{`{{$labels.ingress}}`}} api has returned {{`{{$value}}`}}% 5xx."
@@ -54,7 +54,7 @@ spec:
         context: availability
         service: "{{`{{$labels.ingress}}`}}"
         severity: warning
-        tier: os
+        tier: sre
       annotations:
         summary: "an api has consumed its error budget by 10%"
         description: "{{`{{$labels.ingress}}`}} api has returned {{`{{$value}}`}}% 5xx"
