--- a/openstack/sre/values.yaml
+++ b/openstack/sre/values.yaml
@@ -20,8 +20,28 @@ periods:
 # SLO's
 slo:
   api_error_ratio_percent:
-    keystone: 0.1
     arc-api: 0.1
     barbican-api: 0.1
     castellum-api: 0.1
     cinder-api: 0.1
+    cfm: 0.1
+    designate-api: 0.1
+    elektra: 0.1
+    es-client: 0.1
+    es-manager: 0.1
+    glance: 0.1
+    grafana: 0.1
+    grafana-global: 0.1
+    hermes-api: 0.1
+    ironic-api: 0.1
+    keystone: 0.1
+    kibana: 0.1
+    limes-api-ccloud: 0.1
+    lyra: 0.1
+    maia: 0.1
+    maia-oprom: 0.1
+    manila-api: 0.1
+    neutron-server: 0.1
+    nova-api: 0.1
+    nova-console: 0.1
+    nova-placement-api: 0.1
