added masterdata_viewer to a few BS groups

--- a/openstack/billing/templates/seeds.yaml
+++ b/openstack/billing/templates/seeds.yaml
@@ -154,6 +154,18 @@ spec:
       - domain: bs
         role: masterdata_viewer
         inherited: true
+  {{- if and (ne .Values.global.region "staging") (ne .Values.global.region "qa-de-1") }}
+    - name: BS_CCloud_SO_TLO
+      role_assignments:
+      - domain: bs
+        role: masterdata_viewer
+        inherited: true
+    - name: BS_CCLOUD_SM
+      role_assignments:
+      - domain: bs
+        role: masterdata_viewer
+        inherited: true
+  {{- end }}
 
   - name: cp
     groups:
