Use appropriate alert SRE alert text. Too much copy & paste going on here

--- a/openstack/keystone/templates/prometheus-sre-alerts.yaml
+++ b/openstack/keystone/templates/prometheus-sre-alerts.yaml
@@ -32,12 +32,12 @@ spec:
       for: 2m
       labels:
         context: availability
-        service: "{{`{{$labels.ingress}}`}}"
+        service: "{{`{{$labels.service}}`}}"
         severity: info
         tier: sre
       annotations:
-        summary: "an api burns its error budget very fast"
-        description: "{{`{{$labels.ingress}}`}} api has returned {{`{{$value}}`}}% 5xx."
+        summary: "an api burns its latency error budget very fast"
+        description: "{{`{{$labels.service}}`}} api {{`{{$labels.api}}`}} has returned {{`{{$value}}`}}%."
 
     - alert: OpenstackKeystoneSRE10PctErrorBudgetBurn
       expr: |2
@@ -55,10 +55,10 @@ spec:
       for: 1h
       labels:
         context: availability
-        service: "{{`{{$labels.ingress}}`}}"
+        service: "{{`{{$labels.service}}`}}"
         severity: warning
         tier: sre
       annotations:
-        summary: "an api has consumed its error budget by 10%"
-        description: "{{`{{$labels.ingress}}`}} api has returned {{`{{$value}}`}}% 5xx"
+        summary: "an api has consumed its latency error budget by 10%"
+        description: "{{`{{$labels.service}}`}} api {{`{{$labels.api}}`}} has returned {{`{{$value}}`}}%"
 {{- end -}}
