--- a/openstack/sre/templates/prometheus-alerts.yaml
+++ b/openstack/sre/templates/prometheus-alerts.yaml
@@ -16,15 +16,15 @@ spec:
     - alert: OpenstackSRE2or5PctErrorBudgetBurn
       expr: |2
           (
-            (100 * global:api_errors_per_request:ratio_rate1h > on (ingress) 14.4 * global:api_error_ratio_slo:percent)
+            (100 * global:api_errors_per_request:ratio_rate1h > on (ingress) 14.4 * global:api_errors_per_request_ratio_slo:percent)
             and
-            (100 * global:api_errors_per_request:ratio_rate5m > on (ingress) 14.4 * global:api_error_ratio_slo:percent)
+            (100 * global:api_errors_per_request:ratio_rate5m > on (ingress) 14.4 * global:api_errors_per_request_ratio_slo:percent)
           )
           or
           (
-            (100 * global:api_errors_per_request:ratio_rate6h > on (ingress) 6 * global:api_error_ratio_slo:percent)
+            (100 * global:api_errors_per_request:ratio_rate6h > on (ingress) 6 * global:api_errors_per_request_ratio_slo:percent)
             and
-            (100 * global:api_errors_per_request:ratio_rate30m > on (ingress) 6 * global:api_error_ratio_slo:percent)
+            (100 * global:api_errors_per_request:ratio_rate30m > on (ingress) 6 * global:api_errors_per_request_ratio_slo:percent)
           )
       for: 2m
       labels:
@@ -39,15 +39,15 @@ spec:
     - alert: OpenstackSRE10PctErrorBudgetBurn
       expr: |2
           (
-            (100 * global:api_errors_per_request:ratio_rate1d > on (ingress) 3 * global:api_error_ratio_slo:percent)
+            (100 * global:api_errors_per_request:ratio_rate1d > on (ingress) 3 * global:api_errors_per_request_ratio_slo:percent)
             and
-            (100 * global:api_errors_per_request:ratio_rate2h > on (ingress) 3 * global:api_error_ratio_slo:percent)
+            (100 * global:api_errors_per_request:ratio_rate2h > on (ingress) 3 * global:api_errors_per_request_ratio_slo:percent)
           )
           or
           (
-            (100 * global:api_errors_per_request:ratio_rate3d > on (ingress) global:api_error_ratio_slo:percent)
+            (100 * global:api_errors_per_request:ratio_rate3d > on (ingress) global:api_errors_per_request_ratio_slo:percent)
             and
-            (100 * global:api_errors_per_request:ratio_rate6h > on (ingress) global:api_error_ratio_slo:percent)
+            (100 * global:api_errors_per_request:ratio_rate6h > on (ingress) global:api_errors_per_request_ratio_slo:percent)
           )
       for: 1h
       labels:
