[utils] added postgresql switch to all components; pick db_url respectively

--- a/openstack/arc/values.yaml
+++ b/openstack/arc/values.yaml
@@ -45,6 +45,7 @@ updatesProxy:
   #    container: arc-releases-stable
 
 postgresql:
+  enabled: true
   metrics:
     database: arc_production
     customMetrics:
