--- a/openstack/ironic/values.yaml
+++ b/openstack/ironic/values.yaml
@@ -229,6 +229,7 @@ pgmetrics:
               usage: "GAUGE"
               description: "Nodes in maintenance"
 postgresql:
+  enabled: true
   imageTag: '9.4.21'
   postgresDatabase: ironic
   dbInit: ironic-db-init
