--- a/openstack/manila/values.yaml
+++ b/openstack/manila/values.yaml
@@ -255,6 +255,7 @@ pod:
         cpu: "400m"
 
 postgresql:
+  enabled: true
   custom_configmap: false
   custom_repository: true
   imageTag: '9.4.21'
