--- a/openstack/neutron/values.yaml
+++ b/openstack/neutron/values.yaml
@@ -294,6 +294,7 @@ pgmetrics:
             description: "Load of the agent"
 
 postgresql:
+  enabled: true
   custom_repository: true
   imageTag: "9.4.21"
   
