[glance] adjust dependency services

--- a/openstack/glance/templates/migration-job.yaml
+++ b/openstack/glance/templates/migration-job.yaml
@@ -30,7 +30,7 @@ spec:
         - name: NAMESPACE
           value: {{ .Release.Namespace }}
         - name: DEPENDENCY_SERVICE
-          value: {{ .Release.Name }}-postgresql
+          value: {{ .Release.Name }}-mariadb
         - name: PGAPPNAME
           valueFrom:
             fieldRef:
