--- a/openstack/glance/templates/deployment.yaml
+++ b/openstack/glance/templates/deployment.yaml
@@ -75,7 +75,7 @@ spec:
         - name: DEPENDENCY_JOBS
           value: "glance-migration-job"
         - name: DEPENDENCY_SERVICE
-          value: {{ .Release.Name }}-postgresql,{{ .Release.Name }}-memcached
+          value: {{ .Release.Name }}-mariadb,{{ .Release.Name }}-memcached
         - name: DEBUG_CONTAINER
           value: "false"
         - name: PGAPPNAME
