better alert message

--- a/openstack/sre/templates/prometheus-alerts.yaml
+++ b/openstack/sre/templates/prometheus-alerts.yaml
@@ -33,7 +33,7 @@ spec:
         severity: info
         tier: sre
       annotations:
-        summary: "an api burns its error budget very fast"
+        summary: "an api burns its availability error budget very fast"
         description: "{{`{{$labels.ingress}}`}} api has returned {{`{{$value}}`}}% 5xx."
 
     - alert: OpenstackSRE10PctErrorBudgetBurn
@@ -56,5 +56,5 @@ spec:
         severity: warning
         tier: sre
       annotations:
-        summary: "an api has consumed its error budget by 10%"
+        summary: "an api has consumed its availability error budget by 10%"
         description: "{{`{{$labels.ingress}}`}} api has returned {{`{{$value}}`}}% 5xx"
