fixed alert tier value

--- a/openstack/sre/templates/prometheus-aggregations.yaml
+++ b/openstack/sre/templates/prometheus-aggregations.yaml
@@ -6,7 +6,7 @@ kind: PrometheusRule
 metadata:
   name: openstack-sre-aggregations
   labels:
-    tier: os
+    tier: sre
     type: aggregation-rules
     prometheus: {{ required ".Values.prometheus.aggregations missing" $values.prometheus.aggregations }}
 
