[supernova]: update env variables

--- a/global/supernova/templates/deployment.yaml
+++ b/global/supernova/templates/deployment.yaml
@@ -35,10 +35,12 @@ spec:
               value: {{ .Values.auth_scope_domain }}
             - name: AUTH_SCOPE_PROJECT
               value: {{ .Values.auth_scope_project }}
-            - name: ALERTS_API_ENDPOINT
-              value: {{ .Values.alerts_api_endpoint }}
+            - name: REACT_APP_ALERTMANAGER_API_ENDPOINT
+              value: {{ .Values.alertmanager_api_endpoint }}
             - name: ALERTS_UPDATE_TIMEOUT_SEC
               value: {{ .Values.alerts_update_timeout_sec | quote }}
+            - name: SILENCES_UPDATE_TIMEOUT_SEC
+              value: {{ .Values.silences_update_timeout_sec | quote }}
           livenessProbe:
             httpGet:
               path: /system/liveliness
