--- a/openstack/keystone/templates/prometheus-sre-aggregations.yaml
+++ b/openstack/keystone/templates/prometheus-sre-aggregations.yaml
@@ -8,7 +8,7 @@ metadata:
   name: openstack-keystone-sre.aggregations
   labels:
     app: keystone
-    tier: os
+    tier: sre
     type: aggregation-rules
     prometheus: {{ required ".Values.sre.prometheus.aggregations missing" $values.sre.prometheus.aggregations }}
 
@@ -18,29 +18,29 @@ spec:
     rules:
     - record: global:api_request_duration_seconds_bucket
       labels:
-          service: "keystone"
-          api: "token-create"
+        service: "keystone"
+        api: "token-create"
       expr: sum(openstack_watcher_api_requests_duration_seconds_bucket{service="identity", target_type_uri="data/security/auth/tokens", action="authenticate"}) by (region, status, le)
 
     - record: global:api_request_duration_seconds_sum
       labels:
-          service: "keystone"
-          api: "token-create"
+        service: "keystone"
+        api: "token-create"
       expr: sum(openstack_watcher_api_requests_duration_seconds_sum{service="identity", target_type_uri="data/security/auth/tokens", action="authenticate"}) by (region, status, le)
 
     - record: global:api_latency_violations_per_request_slo:percent
       labels:
-          region: {{required ".Values.global.region missing" $values.global.region}}
-          service: "keystone"
-          api: "token-create"
+        region: {{required ".Values.global.region missing" $values.global.region}}
+        service: "keystone"
+        api: "token-create"
       expr: {{ $values.sre.slo.api_latency_violations_per_request_ratio_percent.token_create | quote }}
 
 {{- range $period := $values.sre.periods }}
     - record: global:api_latency_violations_per_request_sli:ratio_rate{{$period}}
       labels:
-          region: {{required ".Values.global.region missing" $values.global.region}}
-          service: "keystone"
-          api: "token-create"
+        region: {{required ".Values.global.region missing" $values.global.region}}
+        service: "keystone"
+        api: "token-create"
       expr: |2
         (
         sum(rate(openstack_watcher_api_requests_duration_seconds_bucket{service="identity", target_type_uri="data/security/auth/tokens", action="authenticate", status="201", le="+Inf"}[{{$period}}])) -
@@ -52,29 +52,29 @@ spec:
 
     - record: global:api_request_duration_seconds_bucket
       labels:
-          service: "keystone"
-          api: "token-validate"
+        service: "keystone"
+        api: "token-validate"
       expr: sum(openstack_watcher_api_requests_duration_seconds_bucket{service="identity", target_type_uri="data/security/auth/tokens", action="read/list"}) by (region, status, le)
 
     - record: global:api_request_duration_seconds_sum
       labels:
-          service: "keystone"
-          api: "token-validate"
+        service: "keystone"
+        api: "token-validate"
       expr: sum(openstack_watcher_api_requests_duration_seconds_sum{service="identity", target_type_uri="data/security/auth/tokens", action="read/list"}) by (region, status, le)
 
     - record: global:api_latency_violations_per_request_slo:percent
       labels:
-          service: "keystone"
-          api: "token-validate"
-          region: {{required ".Values.global.region missing" $values.global.region}}
+        service: "keystone"
+        api: "token-validate"
+        region: {{required ".Values.global.region missing" $values.global.region}}
       expr: {{ $values.sre.slo.api_latency_violations_per_request_ratio_percent.token_validate | quote }}
 
 {{- range $period := $values.sre.periods }}
     - record: global:api_latency_violations_per_request_sli:ratio_rate{{$period}}
       labels:
-          service: "keystone"
-          api: "token-validate"
-          region: {{required ".Values.global.region missing" $values.global.region}}
+        service: "keystone"
+        api: "token-validate"
+        region: {{required ".Values.global.region missing" $values.global.region}}
       expr: |2
         (
         sum(rate(openstack_watcher_api_requests_duration_seconds_bucket{service="identity", target_type_uri="data/security/auth/tokens", action="read/list", status="200", le="+Inf"}[{{$period}}])) -
