--- a/openstack/sre/templates/prometheus-aggregations.yaml
+++ b/openstack/sre/templates/prometheus-aggregations.yaml
@@ -24,7 +24,7 @@ spec:
 {{- end }}
 
 {{- range $period := $values.periods }}
-    - record: global:api_errors_per_request:ratio_rate{{$period}}
+    - record: global:api_errors_per_request_sli:ratio_rate{{$period}}
       expr: |2
           sum(rate(nginx_ingress_controller_requests{status=~"5.."}[{{$period}}])) by (region, ingress) /  sum(rate(nginx_ingress_controller_requests[{{$period}}])) by (region, ingress)
 
