[infra-monitoring] add alertmanager metrics exportation
prepare scraping of alertmanager metrics + alerting;
fix typo in thousandeyes

--- a/system/infra-monitoring/requirements.yaml
+++ b/system/infra-monitoring/requirements.yaml
@@ -93,3 +93,9 @@ dependencies:
     repository: file://vendor/vasa-exporter
     version: 1.0.0
     condition: vasa_exporter.enabled
+
+  - name: alertmanager-exporter
+    alias: alertmanager_exporter
+    repository: file://vendor/alertmanager-exporter
+    version: 0.1.0
+    condition: alertmanager_exporter.enabled
