--- a/system/infra-monitoring/values.yaml
+++ b/system/infra-monitoring/values.yaml
@@ -66,6 +66,9 @@ prometheus_infra_collector:
   alertmanagers:
     - alertmanager.eu-de-1.cloud.sap
 
+alertmanager_exporter:
+  enabled: false
+  
 cloudprober_exporter:
   enabled: false
 
