--- a/openstack/cinder/templates/migration-job.yaml
+++ b/openstack/cinder/templates/migration-job.yaml
@@ -22,7 +22,7 @@ spec:
             - name: NAMESPACE
               value: {{ .Release.Namespace }}
             - name: DEPENDENCY_SERVICE
-              value: "cinder-postgresql"
+              value: "{{ .Release.Name }}-mariadb"
             - name: PGAPPNAME
               valueFrom:
                 fieldRef:
