--- a/openstack/cinder/templates/db-cleanup-cronjob.yaml
+++ b/openstack/cinder/templates/db-cleanup-cronjob.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.postgresql.enabled true }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -40,3 +41,4 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
+{{- end }}
