--- a/openstack/cinder/templates/db-init-configmap.yaml
+++ b/openstack/cinder/templates/db-init-configmap.yaml
@@ -10,7 +10,7 @@ metadata:
 
 data:
   db-init.sql: |
-    CREATE DATABASE {{.Values.dbName}};
+    CREATE DATABASE {{.Values.db_name}};
     CREATE ROLE {{.Values.global.dbUser}} WITH ENCRYPTED PASSWORD '{{required ".Values.global.dbPassword is missing" .Values.global.dbPassword}}' LOGIN;
-    GRANT ALL PRIVILEGES ON DATABASE {{.Values.dbName}} TO {{.Values.global.dbUser}};
+    GRANT ALL PRIVILEGES ON DATABASE {{.Values.db_name}} TO {{.Values.global.dbUser}};
 {{- end }}
