[nova] Configure SMBIOS Chassis Asset Tag
This will be used e.g. by AS ABAP for group licensing, because with the
asset tag, they can determine, that they run on CCloud.

--- a/openstack/nova/values.yaml
+++ b/openstack/nova/values.yaml
@@ -201,6 +201,7 @@ compute:
       use_linked_clone: false
       pbm_enabled: false
       pbm_default_policy: "nova-ephemeral"
+      smbios_asset_tag: "SAP CCloud VM"
 
 conductor: {}
 
