add alerts for prometheus; bump prometheus server to v2.12.0; test values

--- a/system/prometheus-server/templates/servicemonitors/prometheus.yaml
+++ b/system/prometheus-server/templates/servicemonitors/prometheus.yaml
@@ -23,7 +23,10 @@ spec:
         - action: replace
           targetLabel: region
           replacement: {{ required ".Values.global.region undefined" .Values.global.region }}
-          {{ if .Values.global.clusterType }}
+        - action: replace
+          targetLabel: prometheus
+          replacement: {{ include "prometheus.name" . }}
+        {{ if .Values.global.clusterType }}
         - action: replace
           targetLabel: cluster_type
           replacement: {{ .Values.global.clusterType }}
