--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -16,7 +16,7 @@ global:
 # The repository and tag of the Prometheus image.
 image:
   repository: prom/prometheus
-  tag: v2.11.1
+  tag: v2.12.0
 
 # Mandatory name for this Prometheus.
 # The name is used to find relevant aggregation and alerting rules.
@@ -230,3 +230,7 @@ affinity: {}
 # Define which Nodes the Pods are scheduled on.
 # See https://kubernetes.io/docs/user-guide/node-selection
 nodeSelector: {}
+
+#
+alerts:
+  tier: k8s
