fix playbook links and alerts.tier

--- a/system/prometheus-server/ci/test-values.yaml
+++ b/system/prometheus-server/ci/test-values.yaml
@@ -3,6 +3,7 @@ global:
   domain: evil.corp
   clusterType: controlplane
   cluster: x-regionOne
+  tier: alertTierKubernetes
 
 externalLabels:
   foo: bar
