--- a/system/prometheus-server/values.yaml
+++ b/system/prometheus-server/values.yaml
@@ -13,6 +13,9 @@ global:
   # Defaults to region if not set.
   # cluster:
 
+  # Optional tier for Prometheus alerts.
+  # tier: k8s
+
 # The repository and tag of the Prometheus image.
 image:
   repository: prom/prometheus
@@ -231,6 +234,7 @@ affinity: {}
 # See https://kubernetes.io/docs/user-guide/node-selection
 nodeSelector: {}
 
-#
+# The tier of the alerts.
+# If set .Values.global.tier takes precedence.
 alerts:
   tier: k8s
