[designate] added missing value

--- a/openstack/designate/values.yaml
+++ b/openstack/designate/values.yaml
@@ -12,6 +12,7 @@ sentry:
   enabled: true
 
 global:
+  dbPassword: DEFINED-IN-REGION-CHART
   image_repository: DEFINED-IN-OPENSTACK-CHART
   image_namespace: DEFINED-IN-OPENSTACK-CHART
   designate_api_endpoint_protocol_admin: http
