scrape alertmanager metrics again

--- a/global/prometheus-alertmanager/templates/deployment.yaml
+++ b/global/prometheus-alertmanager/templates/deployment.yaml
@@ -16,6 +16,10 @@ spec:
       labels:
         app: prometheus
         type: alertmanager
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/port: "9093"
+        prometheus.io/targets: "kubernetes"
     spec:
       nodeSelector:
         zone: farm
